--- a/layouts/notes/list.html
+++ b/layouts/notes/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="cmd-line">
-    <span class="prompt">~$</span> <span class="command">cat</span> <span class="string">notes.log</span>
+    <span class="prompt">root@wall:~#</span> <span class="command">cat</span> <span class="string">notes.log</span>
 </div>
 
 {{ range .Pages }}
