feat: changed style

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="cmd-line">
-    <span class="prompt">root@wall:~#</span> <span class="command">cat</span> <span class="string">{{ .File.BaseFileName }}.md</span>
+    <span class="prompt">$</span> <span class="command">cat</span> <span class="string">{{ .File.BaseFileName }}.md</span>
 </div>
 
 <article>
