--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="cmd-line">
-    <span class="prompt">root@wall:~#</span> <span class="command">ls</span> <span class="flag">-la</span> <span class="string">blog/</span>
+    <span class="prompt">$</span> <span class="command">ls</span> <span class="flag">-la</span> <span class="string">blog/</span>
 </div>
 
 {{ range .Pages }}
