feat: added interactive terminal

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,5 +17,6 @@
         </div>
         {{ partial "footer.html" . }}
     </div>
+    {{ if .IsHome }}<script src="/js/terminal.js"></script>{{ end }}
 </body>
 </html>
