--- a/layouts/index.html
+++ b/layouts/index.html
@@ -208,8 +208,10 @@
         </div>
     </div>
 
-    <div class="cmd-line" style="margin-top: 2rem;">
-        <span class="prompt">~$</span> <span class="cursor"></span>
+    <div class="terminal-output"></div>
+    <div class="cmd-line terminal-input-line" style="margin-top: 2rem;">
+        <span class="prompt">~$</span>
+        <input type="text" class="terminal-input" placeholder="type 'help' for commands" spellcheck="false" autocomplete="off" autocapitalize="off">
     </div>
 </section>
 {{ end }}
