feat: added light mode

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -218,6 +218,10 @@
             <a href="https://github.com/{{ .Site.Params.github }}">github.com/{{ .Site.Params.github }}</a>
         </div>
         <div class="contact-row">
+            <span class="contact-label">x</span>
+            <a href="https://x.com/mikhwall">x.com/mikhwall</a>
+        </div>
+        <div class="contact-row">
             <span class="contact-label">linkedin</span>
             <a href="https://linkedin.com/in/{{ .Site.Params.linkedin }}">linkedin.com/in/{{ .Site.Params.linkedin }}</a>
         </div>
