--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,4 +12,5 @@
             <a href="/">← back</a>
         {{ end }}
     </nav>
+    <button class="theme-toggle" onclick="toggleTheme()" title="Toggle theme">☀</button>
 </div>
