fix: role rename

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -44,7 +44,7 @@
     <div class="output">
         <div class="exp-item">
             <div class="exp-header">
-                <span><span class="exp-role">Senior Backend Engineer</span> @ <a href="https://infrared.finance" class="exp-company">Infrared Finance</a> <span class="comment">(Binance Labs, Framework)</span></span>
+                <span><span class="exp-role">Senior Blockchain Engineer</span> @ <a href="https://infrared.finance" class="exp-company">Infrared Finance</a> <span class="comment">(Binance Labs, Framework)</span></span>
                 <span class="exp-date">2025 → now</span>
             </div>
             <div class="exp-desc">Uniswap V3 optimizer, Safe multi-sig client, price aggregation</div>
