feat: added counter

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -42,5 +42,9 @@
         {{ partial "footer.html" . }}
     </div>
     {{ if .IsHome }}<script src="/js/terminal.js"></script>{{ end }}
+
+    <!-- Analytics (GoatCounter) -->
+    <script data-goatcounter="https://mikelle.goatcounter.com/count"
+            async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
