--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,6 +28,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&display=swap" as="style">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/theme.js"></script>
@@ -41,7 +42,9 @@
         </div>
         {{ partial "footer.html" . }}
     </div>
-    {{ if .IsHome }}<script src="/js/terminal.js"></script>{{ end }}
+    {{ if .IsHome }}
+    <script src="/js/terminal.js"></script>
+    {{ end }}
 
     <!-- Analytics (GoatCounter) -->
     <script data-goatcounter="https://mikelle.goatcounter.com/count"
